--- a/app/src/main/res/layout/custom_dialog_ok.xml
+++ b/app/src/main/res/layout/custom_dialog_ok.xml
@@ -10,7 +10,8 @@
     android:text="Đáp án cuối cùng của bạn là "
     android:background="#212121"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:padding="10dp"
+    android:layout_height="wrap_content"
     />
     <RelativeLayout
         android:layout_width="match_parent"
