--- a/app/src/main/res/layout/custom_dialog_goinguoithan.xml
+++ b/app/src/main/res/layout/custom_dialog_goinguoithan.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="#00BCD4"
+    android:background="@drawable/goidien_dialog"
     android:layout_height="wrap_content">
 <TextView
     android:textSize="30dp"
